@@ -9,16 +9,16 @@ my $proc = new Coro::State \&a;
 
 sub a {
    print "ok 3\n";
-   $proc->transfer ($main, 0);
+   $proc->transfer ($main);
    print "ok 5\n";
-   $proc->transfer ($main, 0);
+   $proc->transfer ($main);
    print "not ok 6\n";
    die;
 }
 
 print "ok 2\n";
-$main->transfer ($proc, 0);
+$main->transfer ($proc);
 print "ok 4\n";
-$main->transfer ($proc, 0);
+$main->transfer ($proc);
 print "ok 6\n";
 
